25-09-2020: Anpassungen beider Fenster
Auf beiden Seiten (Startseite.html und Parkhaus.html) wurden die Codes, welche übergreifend sind zeilenweise gleich geordnet. Zudem ist die Startseite auch im Nachtmodus/Blaulichtfilter Zustand geeignet

--- a/Parkhaus.html
+++ b/Parkhaus.html
@@ -1,27 +1,12 @@
 <html>
 <head>
     <title>Parkhaus</title>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="css/styles.css">
-
-    <!--Scripts-->
-    <script type="text/javascript" src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
-    <script type="text/javascript" src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 
     <!--Basic settings-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
-        /* Light mode */
-        body {
-            background-color: white;
-            color: black;
-        }
-        
-        /* Dark mode */
-        .darkmode {
-            background-color: black;
-            color: white;
-        }
-
         /* Text alignments*/
         h1 {
             text-align: left;
@@ -42,7 +27,23 @@
             text-align: left;
             color: cyan;
         }
+
+        /* Light mode */
+        body {
+            background-color: white;
+            color: black;
+        }
+        
+        /* Dark mode */
+        .darkmode {
+            background-color: black;
+            color: white;
+        }
     </style>
+
+    <!--Scripts-->
+    <script type="text/javascript" src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
+    <script type="text/javascript" src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 
     <!--Charts-->
     <script type="text/javascript">
