--- a/Parkhaus.html
+++ b/Parkhaus.html
@@ -181,12 +181,12 @@
             <td>05</td>
 		</tr>
         <tr>
-            <td>Person mit Behinderung</td>
+            <td>Schwerbehinderte</td>
             <td>2,10</td>
             <td>30</td>
         </tr>
         <tr>
-            <td>Mitarbeiter</td>
+            <td>Mitarbeiter/in</td>
             <td>2,40</td>
             <td>20</td>
         </tr>
