--- a/Parkhaus.html
+++ b/Parkhaus.html
@@ -20,11 +20,10 @@
             },
             data: [//array of dataSeries              
                 { //dataSeries object
-
                     /*** Change type "column" to "bar", "area", "line" or "pie"***/
                     type: "column",
                     dataPoints: [
-                        { label: "Anzahl Kunden gesamt", y:0},
+                        { label: "Anzahl Kunden gesamt", y:0 },
                         { label: "Normaler Tarif", y: 0 },
                         { label: "Familientarif", y: 0 },
                         { label: "Frauentarif", y: 0 },
@@ -113,7 +112,7 @@
 			<td>00:00</td>
 		</tr>
 		<tr>
-			<td>Sonntag</td>
+			<td>Sonn- und Feiertag</td>
 			<td>10:00</td>
 			<td>20:00</td>
 		</tr>
@@ -132,7 +131,7 @@
 	</thead>
 	<tbody>
 		<tr>
-			<td>Kein</td>
+			<td>Normal</td>
 			<td>3,00</td>
             <td>00</td>
 		</tr>
@@ -163,7 +162,7 @@
 
 <h4>Anzahl Parkpl&aumltze insgesamt:</h4>
 <p id="anzahlParkplaetzeGesamt"></p>
-<h4>Anzahl Freie Parkpl&aumltze:</h4>
+<h4>Anzahl Freier Parkpl&aumltze:</h4>
 <p id="anzahlFreieParkplaetze"></p>
 <h4>Anzahl Besetzter Parkpl&aumltzen:</h4>
 <p id="anzahlBesetztParkplaetze"></p>
