--- a/Uebersicht.html
+++ b/Uebersicht.html
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
 <head>
     <title>&Uuml;bersicht</title>
     <meta charset="UTF-8">
@@ -8,7 +8,6 @@
 </head>
 
 <body>
-<button onclick="navigateBackToCarPark()">zur&uuml;ck</button>
 <script type="text/javascript">
 function navigateBackToCarPark(){
     window.history.back();
@@ -17,4 +16,6 @@ function navigateBackToCarPark(){
 <h1>&Uuml;bersicht</h1>
     <script type="text/javascript" src="javascript/overview.js"></script>
 </body>
+
+<button onclick="navigateBackToCarPark()">zur&uuml;ck</button>
 </html>
