--- a/Parkhaus.html
+++ b/Parkhaus.html
@@ -93,7 +93,7 @@
 <br>
 
 <div style="float: left;margin-right:10px">
-<h2>Öffnungszeiten:</h2>
+<h2>&Ouml;ffnungszeiten:</h2>
 <table id="openingHours">
     <thead>
 		<tr>
@@ -128,7 +128,7 @@
 		<tr>
 			<th>Tarifgruppe</th>
 			<th>Preis in Euro [€]</th>
-            <th>Vergünstigung in Prozent [%]</th>
+            <th>Verg&uuml;nstigung in Prozent [%]</th>
         </tr>
 	</thead>
 	<tbody>
@@ -172,11 +172,11 @@
 <br>
 <br>
 
-<h4>Anzahl Parkpl&aumltze insgesamt:</h4>
+<h4>Anzahl Parkpl&auml;tze insgesamt:</h4>
 <p id="numberParkingspace"></p>
-<h4>Anzahl Freier Parkpl&aumltze:</h4>
+<h4>Anzahl Freier Parkpl&auml;tze:</h4>
 <p id="numberParkingspaceFree"></p>
-<h4>Anzahl Besetzter Parkpl&aumltze:</h4>
+<h4>Anzahl Besetzter Parkpl&auml;tze:</h4>
 <p id="numberParkingspaceOccupied"></p>
 
 <button onclick="CarsInList()">Neues Auto im Parkhaus</button>
@@ -209,7 +209,7 @@
     <label for="rateWorker">Mitarbeiter</label>
     <br>
     <br>
-    <button type="reset">Ausgew&aumlhlter Tarif widerrufen</button>
+    <button type="reset">Ausgew&auml;hlter Tarif widerrufen</button>
 </form>
 
 <button id="btnPay">Tarif bezahlen</button>
@@ -256,7 +256,7 @@ var subject = document.getElementById("btnPay");
     var DiagrammEnable=true;
     var carparksize=0;
     carparksize=carPark.getCarParkSpaceCount();
-    var pricePerHour=2.0;
+    var pricePerHour=3.0;
     var carArray=[];
     var payedCarsArray=[];
     var SumCars=0;
