--- a/Startseite.html
+++ b/Startseite.html
@@ -19,12 +19,12 @@
 <h2>Autos im Parkhaus:</h2>
 <form method="GET" action="Parkhaus.html">
     <p>
-        <label for="number">Anzahl Parkpl&aumltze angeben:</label>
+        <label for="number">Anzahl Parkpl&auml;tze angeben:</label>
         <input id="number" type="Number" name="number" size="25">
     </p>
     <p>
-        <button type="submit" onclick="checkNumber()">&Uumlbergeben</button>
-        <button type="reset">Eingabe l&oumlschen</button>
+        <button type="submit" onclick="checkNumber()">&Uuml;bergeben</button>
+        <button type="reset">Eingabe l&ouml;schen</button>
     </p>
 </form>
 <script type="text/javascript" src="javascript/carpark.js"></script>
